Updated Event Management

--- a/Event- Management-Application Gallery/desktop.ini
+++ b/Event- Management-Application Gallery/desktop.ini
@@ -1,3 +1,7 @@
 [LocalizedFileNames]
 Screenshot 2025-01-30 191152.png=@Screenshot 2025-01-30 191152,0
 Screenshot 2025-01-30 191323.png=@Screenshot 2025-01-30 191323,0
+Screenshot 2025-03-02 164949.png=@Screenshot 2025-03-02 164949,0
+Screenshot 2025-03-02 165158.png=@Screenshot 2025-03-02 165158,0
+Screenshot 2025-03-02 165218.png=@Screenshot 2025-03-02 165218,0
+Screenshot 2025-03-02 165250.png=@Screenshot 2025-03-02 165250,0
